--- a/#src/scss/_1header.scss
+++ b/#src/scss/_1header.scss
@@ -1,26 +1,26 @@
 .header {
    padding: 23px 0px 114px 0px;
    background-color: $mainColor;
-   @media (max-width: $md3 + px) {
+
+   @media (max-width: ($md3 + px)) {
       padding: 23px 0px 50px 0px;
    }
 }
 
 .header__container {
    padding: 0px 20px;
-
 }
 
 .header__wrapper {
    padding: 27px 0px 21px 0px;
+   position: relative;
    display: flex;
    justify-content: space-evenly;
    align-items: flex-end;
    background-color: $descrColor;
    border-radius: 100px;
-   position: relative;
 
-   @media (max-width: $md3 + px) {
+   @media (max-width: ($md3 + px)) {
       align-items: center;
    }
 }
@@ -49,15 +49,15 @@
       flex: 0 1 auto;
    }
 
-   @media (max-width: $md3 + px) {
+   @media (max-width: ($md3 + px)) {
       display: none;
    }
 
 
-   li {
+   .header-list__item {
       margin-right: 97px;
 
-      @media (max-width: $md2+px) {
+      @media (max-width:($md2+px)) {
          margin-right: 60px;
       }
 
@@ -65,11 +65,11 @@
          margin-right: 0px;
       }
 
-      a {
+      .header-list__link {
          @include adaptive-font (18, 16);
          line-height: calc(25 / 18);
          color: $mainColor;
-         transition: all 0.3s ease;
+         transition: $transition;
 
          &:hover {
             color: $whiteColor;
@@ -85,20 +85,19 @@
       flex: 0 1 auto;
    }
 
-   @media (max-width: $md3 + px) {
+   @media (max-width: ($md3 + px)) {
       display: none;
       order: 2;
    }
 
-
-   a {
+   .header-button__link {
       display: inline-block;
       padding: 5px 21px;
       @include adaptive-font (14, 16);
       line-height: calc(19 / 14);
       color: $whiteColor;
       border: 1px solid $whiteColor;
-      transition: all 0.3s ease;
+      transition: $transition;
 
       &:hover {
          background-color: $mainColor;
