--- a/#src/scss/_5sounds.scss
+++ b/#src/scss/_5sounds.scss
@@ -5,10 +5,9 @@
 
 .sounds__container {
    padding: 0px 78px;
-   display: flex;
-   justify-content: space-between;
+   @include center-between;
 
-   @media (max-width: $md2 +px) {
+   @media (max-width: ($md2 +px)) {
       flex-direction: column-reverse;
       text-align: center;
       padding: 0px 15px;
@@ -16,9 +15,7 @@
 }
 
 .sounds__pic {
-  
-
-   @media (max-width: $md2 +px) {
+   @media (max-width: ($md2 +px)) {
       text-align: center;
    }
 }
@@ -27,7 +24,7 @@
    flex: 0 1 64.5%;
    padding: 0px 0px 0px 20px;
 
-   h2 {
+   .sounds-info__title {
       padding: 0px 0px 57px 0px;
       width: 94%;
       font-family: Roboto;
@@ -35,31 +32,38 @@
       line-height: calc(64 / 55);
       color: $whiteColor;
 
-      @media (max-width: $md2 +px) {
+      @media (max-width: ($md2 +px)) {
          width: 100%;
       }
    }
 
-   div {
-      display: flex;
-      justify-content: space-between;
+   .sounds-info__offer {
+      @include center-between;
 
-      @media (max-width: $md2 +px) {
+      @media (max-width: ($md2 +px)) {
          padding: 0px 0px 30px 0px;
       }
 
-      @media (max-width: $md4 +px) {
-         flex-direction: column;
-         justify-content: center;
-         align-items: center;
+      @media (max-width: ($md4 +px)) {
+         @include center;
       }
 
-      p {
+      .offer__descr {
          display: block;
          width: 35%;
          @include adaptive-font (20, 16);
          line-height: calc(27 / 20);
          color: $whiteColor;
+
+
+         @media (max-width: 1200px) {
+            width: 40%;
+         }
+
+         @media (max-width: ($md4 +px)) {
+            width: 80%;
+            margin-bottom: 20px;
+         }
 
          &:last-child {
             margin-right: 65px;
@@ -68,16 +72,6 @@
                margin-right: 0px;
             }
          }
-
-         @media (max-width: 1200px) {
-            width: 40%;
-         }
-
-         @media (max-width: $md4 +px) {
-            width: 80%;
-            margin-bottom: 20px;
-         }
       }
    }
 }
-
