--- a/#src/scss/_6footer.scss
+++ b/#src/scss/_6footer.scss
@@ -1,7 +1,7 @@
 .footer {
    padding: 119px 0px 0px 0px;
 
-   @media (max-width: $md2 +px) {
+   @media (max-width: ($md2 +px)) {
       padding: 80px 0px 0px 0px;
    }
 }
@@ -185,6 +185,7 @@
          display: block;
          margin-bottom: 28px;
       }
+
       .main-link {
          font-size: 13px;
          line-height: 18px;
