--- a/#src/scss/mixins.scss
+++ b/#src/scss/mixins.scss
@@ -19,6 +19,7 @@
 	display: $display;
 	position: $pos;
 }
+
 //Псевдоэлементы (::before,::after)
 
 //Адаптивный шрифт
@@ -38,3 +39,29 @@
 
 
 //Адаптивный шрифт
+
+@mixin center {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+
+@mixin column-center {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
+@mixin start-between{
+	display: flex;
+   align-items: flex-start;
+   justify-content: space-between;
+}
+
+@mixin center-between{
+	display: flex;
+   align-items: center;
+   justify-content: space-between;
+}
